progs/tests/invalid_assign.sy
start :: fn {
    a := 1
    a = 0.1
    a
}

// error: #TypeMismatch(Type::Int, Type::Float)
